# lightbringer

./: .gitignore  .gitmodules  README.md  configure.sh  premake5.lua
engine/: CMakeLists.txt
engine/src/: engine_api.h  log.h
engine/src/camera/: camera.cpp  camera.h
engine/src/renderer/: light_manager.cpp  light_manager.h  renderer.cpp  renderer.h  shader.cpp  shader.h
engine/src/resources/: resource_manager.cpp  resource_manager.h  sprite_sheet.cpp  sprite_sheet.h
engine/src/scene/: components.h  entity.cpp  entity.h  scene.cpp  scene.h
engine/src/timer/: timer.cpp  timer.h
engine/src/window/: window.cpp  window.h
game/: CMakeLists.txt
game/src/: app.cpp  app.h  config_params.h  main.cpp
game/src/editor/: editor.cpp  editor.h
game/src/game/: game.cpp  game.h  game_components.h
game/src/game/light/: light.cpp  light.h
game/src/game/map/: map.cpp  map.h  map_consts.h
game/src/game/player/: player.cpp  player.h
libs/: glad.lua  glfw.lua  glm.lua  imgui.lua  sdl2.lua  sdl2_image.lua  sdl2main.lua  spdlog.lua
res/shaders/: base.frag  base.vert  batch.frag  batch.vert  inst.frag  inst.vert
res/sprites/sheets/: tileset.prefab  tileset1.prefab
